# qaBotHandT

./: README.md  ToDo.txt  temp.ipynb
backend/: .gitignore  pyproject.toml  temp.ipynb
backend/app/: main.py
backend/app/agent/: graph.py  router.py
backend/app/docs_splitting/: __init__.py  core.py  pdf_splitter copy.py  pdf_splitter.py  router.py
backend/app/rag/: loaders.py  vectorstore.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/chat/: route.ts
frontend/src/app/api/chat-stream/: route.ts
frontend/src/app/api/chat/history/[collectionId]/: route.ts
frontend/src/app/api/download-all/[upload_id]/: route.ts
frontend/src/app/api/download-uploaded/[collectionId]/[filename]/: route.ts
frontend/src/app/api/download/[upload_id]/[filename]/: route.ts
frontend/src/app/api/process/: route.ts
frontend/src/app/api/split-pdf/: route.ts
frontend/src/app/api/upload/: route.ts
frontend/src/app/api/upload-only/: route.ts
frontend/src/components/: ChatInterface.tsx  FileUploadPanel.tsx  MarkdownRenderer.tsx  PdfSplitter.tsx  Sidebar.tsx
frontend/src/lib/: uploadClient.ts
