[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "autogen>=0.10.4",
    "autogen-agentchat>=0.7.5",
    "autogen-ext[mistral,openai]>=0.7.5",
    "autogenstudio>=0.1.5",
    "docx2python>=3.5.0",
    "fastapi[standard]>=0.128.0",
    "pdfplumber>=0.11.9",
    "pypandoc>=1.16.2",
    "python-docx>=1.2.0",
    "ruff>=0.14.13",
    "sse-starlette>=3.1.2",
]
