[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiosqlite>=0.22.1",
    "docx2python>=3.5.0",
    "fastapi[standard]>=0.128.0",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.3",
    "langchain>=1.2.7",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.0",
    "langchain-groq>=1.1.1",
    "langchain-huggingface>=1.2.0",
    "langchain-openai>=1.1.7",
    "langchain-text-splitters>=1.1.0",
    "langgraph>=1.0.7",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "llvmlite==0.46.0",
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.9",
    "pi-heif>=1.2.0",
    "pymupdf>=1.26.7",
    "pypandoc>=1.16.2",
    "python-docx>=1.2.0",
    "python-magic>=0.4.27",
    "reportlab>=4.4.9",
    "ruff>=0.14.13",
    "sentence-transformers>=5.2.2",
    "sse-starlette>=3.1.2",
    "unstructured==0.18.31",
    "unstructured-inference>=1.1.7",
]

[dependency-groups]
temp = [
    "ipykernel>=7.1.0",
    "jupyterlab>=4.5.3",
]
